# i3-wacom

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  util.hpp
